# deepseek_r1_zero_reproduce

./: .env  .gitignore  CLAUDE.md  CONFIG_INTEGRATION.md  CONFIG_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_README.md  LOGGING_SYSTEM.md  OPTIMIZED_TRAINING_COMMANDS.md  PROJECT_STRUCTURE.md  README.md  config.yaml  evaluate_countdown.py  inference.py  profile_training.py  pyproject.toml  resume.sh  script.txt  setup_env.sh  test_inference.py  train-deepseek-tutorial.md  train.sh  train_grpo.py
docs/: CONSOLIDATED_DOCS.md  countdown_dataset_analysis.md
grpo_trainer_lora_model/: adapter_config.json
src/: __init__.py
src/config/: __init__.py  grpo_config.py  manager.py  overrides.py  schemas.py  validator.py
src/data/: dataset.py
src/inference/: __init__.py  (+4 more)
tests/: DATASET_TESTS.md  DEPENDENCY_FIX_SUMMARY.md  README.md  countdown_solver.py  debug_tokenizer_padding.py  heavy_processing_test.py  quick_dataloader_test.py  simple_worker_test.py  test_callbacks.py  test_checkpoint_naming.py  test_config.py  test_config_combinations.py  test_config_profiles.py  test_countdown_integration.py  test_countdown_solver.py  test_countdown_split.py  test_countdown_training.py  test_dataloader_bottleneck.py  test_dataset_consistency.py  test_device_placement.py  test_evaluation_freeze.py  test_gpu_grpo.py  test_grpo_eval_minimal.py  test_grpo_integration.py  test_grpo_simple.py  test_h200_optimization.py  test_inference.py  test_integer_test_size.py  test_integer_test_size_simple.py  test_padding_issue.py  test_profiles.py  test_qwen_padding.py  test_real_dataset_download.py  test_real_dataset_exact_pattern.py  test_reward_functions.py  test_train_grpo_new.py  test_train_test_split.py  test_train_test_split_simple.py  test_training_integration.py  test_tutorial_config.py  (+2 more)
(+15 files in other folders)
